Consolidate usage of tier names in the repo
solve the checkstyle errors #586

pr-link: Alluxio/alluxio#13431
change-id: cid-931435c6f4fdcbb07f19508faeb11caba0605240